--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   dotted_border: ^3.0.1
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
