--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dotted_border: ^3.0.1
   get: ^4.7.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
