--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   get: ^4.7.2
   sqflite: ^2.4.2
 
+  path: any
+  http: ^1.4.0
+  url_launcher: ^6.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
