--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,10 @@ dependencies:
   get: ^4.7.2
   sqflite: ^2.4.2
 
-  path: any
+  path: ^1.9.1
   http: ^1.4.0
   url_launcher: ^6.3.1
+  countries: ^0.0.5+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
